--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,14 @@
   width: 100%;
   
 }
+
+.home-nav{
+  background-color:aqua;
+}
+
 </style>
 <body style="background-color:bisque"> 
- 
+  <h1>asdasd</h1>
   <div id="root" class="container" style="padding: 20px;">
       <!-- This element's contents will be replaced with your component. -->
   </div>
