--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,11 @@
 }
 </style>
 <body style="background-color:bisque"> 
- 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Homepage</a>
+    </div>
+  </nav>
   <div id="root" class="container" style="padding: 20px;">
       <!-- This element's contents will be replaced with your component. -->
   </div>
