--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,20 @@
   width: 100%;
   
 }
+
+.container {
+  padding: 20px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: black;
+}
+
 </style>
 <body style="background-color:bisque"> 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Homepage</a>
-    </div>
-  </nav>
-  <div id="root" class="container" style="padding: 20px;">
+
+  <div id="root">
       <!-- This element's contents will be replaced with your component. -->
   </div>
 </body>
