finished app (for now)

--- a/src/index.html
+++ b/src/index.html
@@ -4,47 +4,9 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
 />
-<style>
-.info-card {
-  padding-bottom: 20px;
-}
-
-.loading-header
-{
-  height: 100vh; /* Magic here */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.link-button
-{
-  width: 100%;
-}
-
-.username
-{
-  margin-bottom: 3px;
-}
-
-.user-photo{
-  background-color: white;
-}
-
-.card-focus{
-  height: 100%;
-  width: 100%;
-  
-}
-
-.home-nav{
-  background-color:aqua;
-}
-
-</style>
+<link rel="stylesheet" href="index.css">
 <body style="background-color:bisque"> 
-  <h1>asdasd</h1>
   <div id="root" class="container" style="padding: 20px;">
-      <!-- This element's contents will be replaced with your component. -->
+   <!--all JSX objects are sent here-->  
   </div>
 </body>
