--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 .loading-header
 {
-  height: 100vh; /* Magic here */
+  height: 100vh; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,6 +50,6 @@
 <body style="background-color:bisque"> 
 
   <div id="root">
-      <!-- This element's contents will be replaced with your component. -->
+    
   </div>
 </body>
